# proyecto_AAA_2026-1_equipo4

./: .gitignore  LICENSE  Makefile  README.md  download_log.txt  job_boosting.sh  pyproject.toml
docs/: mkdocs.yml  project_proposal.md
docs/data/: Delitos.md  Geodata.md  Marginacion.md  Pobreza.md  dataset_baseline.md  dataset_geospatial.md
docs/docs/: index.md
notebooks/: EDA_incidencia_delictiva_municipal.ipynb  EDA_marginacion.ipynb  EDA_pobreza.ipynb  baseline_regression_modeling.ipynb  clustering_socioeconomico.ipynb  data_integration.ipynb  dataset_modelado.ipynb  eda_linear_regression_modeling.ipynb  linear_regression_modeling.ipynb  modelado_baseline.py  modelado_boosting.py
notebooks/experiments/: clustering.ipynb  database.ipynb  dataset_geoespacial.ipynb  dataset_modelado.ipynb  datos_geograficos.ipynb  etl.ipynb  pobreza_testing.ipynb  regression.ipynb  unification.ipynb
proyecto_aaa_2026_1_equipo_4/: __init__.py  dataset.py  features.py  plots.py
proyecto_aaa_2026_1_equipo_4/modeling/: predict.py  train.py
references/: diccionario_incidencia_delictiva_estatal.csv  diccionario_incidencia_delictiva_municipal.csv  diccionario_marginacion.md  diccionario_pobreza.md
reports/: resultados_baseline.csv
src/: download_datasets.py  download_log.txt
src/CONEVAL_pobreza_mexico/: descarga_datos_CONEVAL_pobreza_mexico.py  download_dataset_CCONEVAL_pobreza.py  download_dataset_CONEVAL_pobreza.py
src/incidencia_delictiva/: __init__.py  config.py  logger.py  utils.py
src/incidencia_delictiva/etl/: delitos.py  etl_utils.py  geograficos.py  marginacion.py  pobreza.py
src/incidencia_delictiva/features/: spatial.py
src/incidencia_delictiva/pipelines/: datasets.py  etl.py
src/incidencia_delictiva/pipelines/queries/: dataset_baseline.sql  dataset_geospatial.sql
