[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "proyecto_aaa_2026_1_equipo_4"
version = "0.0.1"
description = "Descripcion_proyecto"
authors = [
  { name = "Equipo_4" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["proyecto_aaa_2026_1_equipo_4"]
include = ["pyproject.toml", "proyecto_aaa_2026_1_equipo_4/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["proyecto_aaa_2026_1_equipo_4"]
force-sort-within-sections = true

