[project]
name = "incidencia-delictiva"
version = "0.1.0"
description = "Por definir."
readme = "README.md"
authors = [
    { name = "Isaul Tirado", email = "tiradolisaul@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
incidencia-delictiva = "incidencia_delictiva:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
