[project]
name = "incidencia-delictiva"
version = "0.1.0"
description = "Por definir."
readme = "README.md"
authors = [
    { name = "Isaul Tirado", email = "tiradolisaul@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
incidencia-delictiva = "incidencia_delictiva:main"
incidencia-delictiva-etl = "incidencia_delictiva.pipelines.etl:run_all_pipelines"
incidencia-delictiva-datasets = "incidencia_delictiva.pipelines.datasets:make_all_datasets"

[project.optional-dependencies]
data = [
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "requests>=2.33.1",
    "scipy>=1.15.3",
    "tqdm>=4.67.3",
]
geo = [
    "geopandas>=1.1.3",
    "libpysal>=4.13.0",
    "pyproj>=3.7.1",
    "shapely>=2.1.2",
]
research = [
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
ml = [
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.6",
]
utils = [
    "colorlog>=6.10.1",
    "loguru>=0.7.3",
]
database = [
    "duckdb>=1.5.2",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
